--- a/student-net/apps/web/package.json
+++ b/student-net/apps/web/package.json
@@ -10,6 +10,7 @@
       "clean": "rm -rf .next"
     },
     "dependencies": {
+      "@clerk/nextjs": "^4.29.2",
       "@student-net/ui": "workspace:*",
       "@student-net/utils": "workspace:*",
       "@student-net/validation": "workspace:*",
