--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.6.0",
     "@types/next-auth": "^3.13.0",
     "next-auth": "^4.24.11"
