--- a/student-net/packages/config/package.json
+++ b/student-net/packages/config/package.json
@@ -5,11 +5,14 @@
   "main": "index.js",
   "files": [
     "eslint-preset.js",
-    "typescript-preset.js"
+    "typescript-preset.json"
   ],
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "eslint-config-prettier": "^9.1.0"
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint-config-next": "^14.0.4",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-turbo": "^1.10.12",
+    "eslint-plugin-react": "^7.33.2"
   }
 }
