--- a/student-net/packages/database/package.json
+++ b/student-net/packages/database/package.json
@@ -16,6 +16,7 @@
     "clean": "rm -rf dist",
     "db:generate": "prisma generate",
     "db:push": "prisma db push --skip-generate",
+    "db:seed": "ts-node src/seed.ts",
     "db:studio": "prisma studio"
   },
   "dependencies": {
