--- a/student-net/packages/ui/package.json
+++ b/student-net/packages/ui/package.json
@@ -16,9 +16,12 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0"
+  "@clerk/nextjs": "^4.29.2",
+  "class-variance-authority": "^0.7.0",
+  "clsx": "^2.1.0",
+  "react-hook-form": "^7.49.2",
+  "tailwind-merge": "^2.2.0",
+  "zod": "^3.22.4"
   },
   "devDependencies": {
     "@student-net/config": "workspace:*",
